Fix header visibility

--- a/src/styles/components/parser/common/parser.less
+++ b/src/styles/components/parser/common/parser.less
@@ -1725,7 +1725,7 @@ body.horizontal > #root {
 	height: auto;
 }
 
-body.horizontal #inner > #game-state,
+body.horizontal #container > #inner > #game-state,
 body.horizontal #container > #inner:not(:hover) > #footer,
 body.horizontal #inner > .split {
 	display: none;
